--- a/LatticeMaker Web/Local/content/lattices.css
+++ b/LatticeMaker Web/Local/content/lattices.css
@@ -3,21 +3,38 @@ input[type=file] {
     visibility: hidden;
 }
 
-.file-name { 
-    background: #f5f5f5; 
-    -moz-border-radius: 3px; 
-    -webkit-border-radius: 3px; 
-    border-radius: 3px; 
-    border: none; 
-    padding: 13px 10px; 
-    width:150px; 
-    height:10px;
-    margin-bottom: 20px; 
-    box-shadow: inset 0px 2px 3px rgba( 0,0,0,0.1 ); 
-    clear: both; 
-} 
- .file-name:focus { 
-    background: #fff; 
-    box-shadow: 0px 0px 0px 3px #fff38e, inset 0px 2px 3px rgba( 0,0,0,0.2 ), 0px 5px 5px rgba( 0,0,0,0.15 ); 
-    outline: none;    
-} 
+div.lattice-controls button {
+    margin-left: 20px;
+}
+
+.lattice-controls
+{
+    text-align: center;
+}
+
+div.file-controls button {
+    margin-left: 20px;
+}
+
+.file-controls
+{
+    text-align: left;
+}
+
+.file-name {
+    height: 25px;
+    width: 200px;
+    padding: 10px;
+    border: 1px solid #B9BDC1;
+    -moz-box-shadow: 0 2px 4px #bbb inset;
+    -webkit-box-shadow: 0 2px 4px #BBB inset;
+    box-shadow: 0 2px 4px #BBB inset;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+}
+
+.file-name:focus {
+    background-color: #E7E8E7;
+    outline: 0;
+}
