--- a/LatticeMaker Web/Local/content/lattices.css
+++ b/LatticeMaker Web/Local/content/lattices.css
@@ -1,8 +1,10 @@
+/* Hide the file control */
 input[type=file] { 
     width: 1px; 
     visibility: hidden;
 }
 
+/* Lattice buttons distributed along the div and centered */ 
 div.lattice-controls button {
     margin-left: 20px;
 }
@@ -12,6 +14,7 @@ div.lattice-controls button {
     text-align: center;
 }
 
+/* File controls separated 20px and aligned to the left */
 div.file-controls button {
     margin-left: 20px;
 }
@@ -21,6 +24,7 @@ div.file-controls button {
     text-align: left;
 }
 
+/* Filename textbox style  */
 .file-name {
     height: 25px;
     width: 200px;
