--- a/LatticeMaker Web/Local/content/lattices.css
+++ b/LatticeMaker Web/Local/content/lattices.css
@@ -51,10 +51,15 @@ div.file-controls button {
   outline: none;
   color: #000;
   margin-right: 30px;
-  padding: 5px 20px 5px 5px;
+  
   font-size: 16px;
   border: 1px solid #C8BFC4;
   border-radius: 4px;
   box-shadow: inset 1px 1px 2px #ddd8dc;
   background: #fff;
+}
+
+.lattice-selection:disabled {
+    color: gray;
+	background: #dddddd;
 }
