Added labels, changed css style for textbox and select

--- a/LatticeMaker Web/Local/content/lattices.css
+++ b/LatticeMaker Web/Local/content/lattices.css
@@ -25,25 +25,19 @@ div.file-controls button {
 }
 
 /* Filename textbox style  */
-.file-name {
-    height: 25px;
-    width: 200px;
-    padding: 10px;
-    border: 1px solid #B9BDC1;
-    -moz-box-shadow: 0 2px 4px #bbb inset;
-    -webkit-box-shadow: 0 2px 4px #BBB inset;
-    box-shadow: 0 2px 4px #BBB inset;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
+.textbox {
+    margin-left: 10px;
+    padding: 3px;
     border-radius: 3px;
+    border: 1px solid #CCC;
+    width: 175px;
+}
+ .textbox:focus {
+    background-color: #F7F7F7;
 }
 
-.file-name:focus {
-    background-color: #E7E8E7;
-    outline: 0;
-}
 
-
+/* Select */
 .lattice-selection {
   display: inline-block;
   height: 30px;
@@ -51,6 +45,7 @@ div.file-controls button {
   outline: none;
   color: #000;
   margin-right: 30px;
+  margin-left: 10px;
   
   font-size: 16px;
   border: 1px solid #C8BFC4;
