--- a/LatticeMaker Web/Local/content/lattices.css
+++ b/LatticeMaker Web/Local/content/lattices.css
@@ -58,3 +58,12 @@ div.file-controls button {
     color: gray;
 	background: #dddddd;
 }
+
+/*Math Textarea*/
+.math-displayer {
+    background: #99ffcc;
+    border: none;
+    width:820px;
+    height:50px;
+    resize:none;
+}
